# IPC

./: .gitignore  CMakeLists.txt  Makefile  README.md  ipc.code-workspace  ipcv.sln  ipcv3.cpp  ipcv3.h  ipcv3.sln  ipcv3.vcxproj  ipcv3.vcxproj.filters  main.cpp  vcpkg-configuration.json  vcpkg.json  vcpkg_dep.cmd
installer/: IPC Installer.csproj  IPC Installer.sln  InstallerForm.Designer.cs  InstallerForm.cs  Program.cs  Resource1.Designer.cs  Resource1.resx
installer/Properties/: Resources.Designer.cs  Settings.Designer.cs
installer/Properties/PublishProfiles/: FolderProfile.pubxml  Pub singlefile.pubxml
ipc/: ipc.vcxproj  ipcv3.cpp
